@@ -1,19 +1,28 @@
-@comment $NetBSD: PLIST,v 1.1 2001/10/31 21:24:34 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.2 2002/11/27 11:03:31 agc Exp $
 bin/xshell.sh
 bin/xvile
 bin/xvile-pager
 bin/xvileget
 libexec/xvile/vile-ada-filt
 libexec/xvile/vile-awk-filt
+libexec/xvile/vile-basic-filt
 libexec/xvile/vile-bat-filt
 libexec/xvile/vile-c-filt
+libexec/xvile/vile-cfg-filt
 libexec/xvile/vile-crypt
+libexec/xvile/vile-cweb-filt
 libexec/xvile/vile-dcl-filt
+libexec/xvile/vile-def-filt
 libexec/xvile/vile-diff-filt
+libexec/xvile/vile-ecl-filt
+libexec/xvile/vile-esql-filt
 libexec/xvile/vile-fdl-filt
 libexec/xvile/vile-html-filt
+libexec/xvile/vile-imake-filt
+libexec/xvile/vile-key-filt
 libexec/xvile/vile-latex-filt
 libexec/xvile/vile-lex-filt
+libexec/xvile/vile-lisp-filt
 libexec/xvile/vile-m4-filt
 libexec/xvile/vile-mail-filt
 libexec/xvile/vile-make-filt
@@ -22,18 +31,26 @@ libexec/xvile/vile-mms-filt
 libexec/xvile/vile-nr-filt
 libexec/xvile/vile-pas-filt
 libexec/xvile/vile-perl-filt
+libexec/xvile/vile-pl-filt
 libexec/xvile/vile-py-filt
+libexec/xvile/vile-rc-filt
 libexec/xvile/vile-rcs-filt
+libexec/xvile/vile-rexx-filt
 libexec/xvile/vile-sccs-filt
+libexec/xvile/vile-sed-filt
 libexec/xvile/vile-sh-filt
+libexec/xvile/vile-sml-filt
 libexec/xvile/vile-spell-filt
 libexec/xvile/vile-sql-filt
+libexec/xvile/vile-tags-filt
 libexec/xvile/vile-tbl-filt
 libexec/xvile/vile-tc-filt
 libexec/xvile/vile-tcl-filt
 libexec/xvile/vile-ti-filt
 libexec/xvile/vile-txt-filt
 libexec/xvile/vile-vile-filt
+libexec/xvile/vile-vlog-filt
+libexec/xvile/vile-xres-filt
 libexec/xvile/vile-xs-filt
 libexec/xvile/vile-yacc-filt
 man/man1/xvile.1
@@ -43,15 +60,22 @@ share/examples/xvile/manpage.rc
 share/examples/xvile/pictmode.rc
 share/examples/xvile/spell.rc
 share/examples/xvile/visvile.rc
-share/xvile/.vilemenu
 share/xvile/ada.keywords
 share/xvile/awk.keywords
+share/xvile/basic.keywords
 share/xvile/bat.keywords
 share/xvile/c.keywords
+share/xvile/color-ls.rc
+share/xvile/cpp.keywords
 share/xvile/csh.keywords
+share/xvile/cweb.keywords
+share/xvile/dates.rc
 share/xvile/dcl.keywords
+share/xvile/def.keywords
 share/xvile/diff.keywords
 share/xvile/digraphs.rc
+share/xvile/ecl.keywords
+share/xvile/esql.keywords
 share/xvile/fdl.keywords
 share/xvile/filters.rc
 share/xvile/html.keywords
@@ -67,41 +91,60 @@ share/xvile/manpage.rc
 share/xvile/nr.keywords
 share/xvile/palettes.rc
 share/xvile/pas.keywords
+share/xvile/pc.keywords
 share/xvile/perl.keywords
+share/xvile/perl/Breadcrumbs.pm
+share/xvile/perl/CaptHook.pm
+share/xvile/perl/Glob2re.pm
+share/xvile/perl/Help.pm
 share/xvile/perl/Vile.pm
+share/xvile/perl/Vile/Exporter.pm
+share/xvile/perl/Vile/Manual.pm
 share/xvile/perl/Vileserv.pm
-share/xvile/perl/dir.pl
-share/xvile/perl/glob2re.pl
-share/xvile/perl/hgrep.pl
-share/xvile/perl/hilite.pl
-share/xvile/perl/lock.pl
-share/xvile/perl/manfilt.pl
+share/xvile/perl/Visit.pm
+share/xvile/perl/capture.pm
+share/xvile/perl/dict.pm
+share/xvile/perl/directory.pm
+share/xvile/perl/dirlist.pm
+share/xvile/perl/gdb.pm
+share/xvile/perl/hgrep.pm
+share/xvile/perl/lock.pm
+share/xvile/perl/man.pm
 share/xvile/perl/mime.pl
 share/xvile/perl/plugins.pl
-share/xvile/perl/search.pl
-share/xvile/perl/shell.pl
-share/xvile/perl/spell.pl
-share/xvile/perl/syntax.pl
-share/xvile/perl/tailf.pl
-share/xvile/perl/visit.pl
+share/xvile/perl/search.pm
+share/xvile/perl/shell.pm
+share/xvile/perl/spell.pm
+share/xvile/perl/winops.pm
 share/xvile/pictmode.rc
 share/xvile/pot.keywords
 share/xvile/py.keywords
+share/xvile/rc.keywords
 share/xvile/rcs.keywords
+share/xvile/rexx.keywords
 share/xvile/sccs.keywords
 share/xvile/sh.keywords
+share/xvile/shifts.rc
+share/xvile/sml.keywords
 share/xvile/spell.rc
 share/xvile/sql.keywords
+share/xvile/tags.keywords
 share/xvile/tbl.keywords
 share/xvile/tc.keywords
 share/xvile/tcl.keywords
 share/xvile/ti.keywords
+share/xvile/vb.keywords
 share/xvile/vile.hlp
 share/xvile/vile.keywords
 share/xvile/vileinit.rc
+share/xvile/vilemenu.rc
 share/xvile/vileperl.rc
+share/xvile/vim.keywords
+share/xvile/vlog.keywords
+share/xvile/xres.keywords
 share/xvile/xs.keywords
 share/xvile/yacc.keywords
+@dirrm share/xvile/perl/Vile
 @dirrm share/xvile/perl
 @dirrm share/xvile
 @dirrm share/examples/xvile
